--- a/gallery.html
+++ b/gallery.html
@@ -142,6 +142,7 @@
   <img src="images/nuakni02.jpg" alt="Memory 2" onclick="enlarge(this)" />
   <img src="images/nukani05.jpg" alt="Memory 3" onclick="enlarge(this)" />
 </div>
+<a href="game.html"><button>View Memories</button></a>
 
       </div>
     </section>
