game file updated

--- a/game.html
+++ b/game.html
@@ -137,6 +137,6 @@
       <p id="game-message"></p>
       <a href="message.html"><button>Final Message</button></a>
     </section>
-    <script src="js/game.js"></script>
+    <script src="game.js"></script>
   </body>
 </html>
