modify index file to increase ui design

--- a/gallery.html
+++ b/gallery.html
@@ -116,7 +116,7 @@
 <div class="gallery">
   <img src="images/bgroup.jpg" alt="Childhood 1" onclick="enlarge(this)" />
   <img src="images/group.jpg" alt="Childhood 2" onclick="enlarge(this)" />
-  <img src="images/nuakni02.jpg" alt="Childhood 3" onclick="enlarge(this)" />
+  <img src="images/nikani09.jpg" alt="Childhood 3" onclick="enlarge(this)" />
 </div>
 
 <!-- Album: School Life -->
@@ -124,22 +124,22 @@
 <div class="gallery">
   <img src="images/nukani01.jpg" alt="School 1" onclick="enlarge(this)" />
   <img src="images/nukani03.jpg" alt="School 2" onclick="enlarge(this)" />
-  <img src="images/nukani05.jpg" alt="School 3" onclick="enlarge(this)" />
+  <img src="images/salini02.jpg" alt="School 3" onclick="enlarge(this)" />
 </div>
 
 <!-- Album: Trips & Adventures -->
 <h3>🌄 Trips & Adventures</h3>
 <div class="gallery">
-  <img src="images/nukani06.jpg" alt="Trip 1" onclick="enlarge(this)" />
+  <img src="images/vithiya.jpg" alt="Trip 1" onclick="enlarge(this)" />
   <img src="images/nukani07.jpg" alt="Trip 2" onclick="enlarge(this)" />
-  <img src="images/nukani08.jpg" alt="Trip 3" onclick="enlarge(this)" />
+  <img src="images/salini.jpg" alt="Trip 3" onclick="enlarge(this)" />
 </div>
 
 <!-- Album: Best Moments -->
 <h3>🌟 Best Moments</h3>
 <div class="gallery">
   <img src="images/nukani01.jpg" alt="Memory 1" onclick="enlarge(this)" />
-  <img src="images/nuakni02.jpg" alt="Memory 2" onclick="enlarge(this)" />
+  <img src="images/kiruthika.jpg" alt="Memory 2" onclick="enlarge(this)" />
   <img src="images/nukani05.jpg" alt="Memory 3" onclick="enlarge(this)" />
 </div>
 <a href="game.html"><button>View Memories</button></a>
