--- a/index.html
+++ b/index.html
@@ -6,19 +6,49 @@
     <title>Happy Birthday!</title>
     <link rel="stylesheet" href="css/style.css" />
     <style>
-      body {
+      * {
         margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      body {
         font-family: "Segoe UI", sans-serif;
         background: linear-gradient(135deg, #ffdee9, #b5fffc);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        text-align: center;
         overflow: hidden;
       }
 
+      .background-album {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        gap: 5px;
+        z-index: 0;
+        opacity: 0.08;
+      }
+
+      .background-album img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        filter: grayscale(50%) blur(2px);
+      }
+
       .section {
+        position: relative;
+        z-index: 1;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 20px;
         animation: fadeIn 2s ease-in-out;
       }
 
@@ -31,7 +61,7 @@
 
       p {
         font-size: 1.2rem;
-        color: #555;
+        color: #333;
         margin-bottom: 20px;
       }
 
@@ -87,6 +117,21 @@
     </style>
   </head>
   <body>
+    <!-- Background Album Grid -->
+    <div class="background-album">
+      <img src="images/nikani09.jpg" alt="bg" />
+      <img src="images/group.jpg" alt="bg" />
+      <img src="images/girls_group.jpg" alt="bg" />
+      <img src="images/nukani03.jpg" alt="bg" />
+      <img src="images/nukani07.jpg" alt="bg" />
+      <img src="images/salini.jpg" alt="bg" />
+      <img src="images/vithiya.jpg" alt="bg" />
+      <img src="images/kiruthika.jpg" alt="bg" />
+      <img src="images/thisa.jpg" alt="bg" />
+      <img src="images/bgroup.jpg" alt="bg" />
+    </div>
+
+    <!-- Foreground Birthday Message -->
     <section class="section">
       <img src="images/nukani08.jpg" alt="Birthday Girl" class="birthday-img" />
       <h1>🎉 Happy Birthday, Nukanitha! 🎂</h1>
