--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         border: 5px solid white;
         box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
         animation: float 3s ease-in-out infinite;
+        object-position: center 20%; /* 👈 Add this line */
         margin-bottom: 20px;
       }
 
